# stm32f3discovery-quaternion_visualization

./: Cargo.toml  README.md
src/: f3_util.rs  madgwick_filter.rs  main.rs
