[package]
name = "quaternion_visualization"
version = "0.1.0"
authors = ["lenna_kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned = { version = "0.3.2", default-features = false }
cast = { version = "*", default-features = false }
byteorder = { version = "1.2.1", default-features = false }
cobs = { version = "*", default-features = false }
cortex-m = { version = "0.5.6", default-features = false }
cortex-m-rt = { version = "*", default-features = false }
panic-semihosting = "0.5.3"
madgwick = { version = "*", default-features = false }
nb = { version = "*", default-features = false }
embedded-hal = "0.2.3"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"
