[package]
name = "quaternion_visualization"
version = "0.1.0"
authors = ["lenna_kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = { version = "0.2.3", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
cobs = { version = "0.1.4", default-features = false }
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.3"
panic-semihosting = "0.5.3"
madgwick = "0.1.1"
nb =  "0.1.2"
aligned = "0.3.2"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"
